smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-colon-newline.smithy
// Parse error at line 2, column 10 near `\n"`: Expected a valid identifier character, but found '\n' | Model
$version:
"2.0"
